Remove legacy code, methods deprecated since 2.2.0 (#1002)